--- a/Obligatorio-PR2/Obligatorio-PR2.csproj
+++ b/Obligatorio-PR2/Obligatorio-PR2.csproj
@@ -231,6 +231,7 @@
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
     <Compile Include="Tecnico.cs" />
+    <Compile Include="Utilities.cs" />
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
