--- a/Obligatorio-PR2/Obligatorio-PR2.csproj
+++ b/Obligatorio-PR2/Obligatorio-PR2.csproj
@@ -150,6 +150,7 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="ViewSwitcher.ascx" />
+    <Content Include="WebBusquedaOrden.aspx" />
     <Content Include="WebCliente.aspx" />
     <Content Include="WebComentarios.aspx" />
     <Content Include="WebOrdenTrabajo.aspx" />
@@ -214,6 +215,13 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WebBusquedaOrden.aspx.cs">
+      <DependentUpon>WebBusquedaOrden.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebBusquedaOrden.aspx.designer.cs">
+      <DependentUpon>WebBusquedaOrden.aspx</DependentUpon>
     </Compile>
     <Compile Include="WebCliente.aspx.cs">
       <DependentUpon>WebCliente.aspx</DependentUpon>
